Database following system

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,10 @@
     <!-- DATABASE -->
     <string name="dbname_users">Users</string>
     <string name="dbname_posts">Posts</string>
+    <string name="dbname_followers">Followers</string>
+    <string name="dbname_following">Following</string>
+    <string name="dbname_notifications">Notifications</string>
+    <string name="dbname_wait_list">WaitList</string>
     <string name="field_username">username</string>
     <string name="field_display_name">displayName</string>
     <string name="field_email">email</string>
